--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 
 PORT=8000
 HOST='0.0.0.0'
-MONGODB_URI='mongodb://0.0.0.0:27017/'
-DATABASE=''
-JWT_SECRET=''
+MONGODB_URI='mongodb+srv://esaaj:TRUAgPji33tobNWH@sampledatabase.4f1fvq6.mongodb.net/?retryWrites=true&w=majority'
+DATABASE='expense-manager'
+JWT_SECRET='Esaaj is the secret key of this app'
