--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "base64-img": "^1.0.4",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.10.0",
     "pm2": "^5.2.2",
     "uuid": "^9.0.0"
