--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@ HOST='0.0.0.0'
 MONGODB_URI='mongodb+srv://esaaj:TRUAgPji33tobNWH@sampledatabase.4f1fvq6.mongodb.net/?retryWrites=true&w=majority'
 DATABASE='expense-manager'
 JWT_SECRET='Esaaj is the secret key of this app'
+ACCESSTOKENLIFETIME='5m'
+REFRESHTOKENLIFETIME='15m'
