--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-winston": "^4.2.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.10.0",
     "pm2": "^5.2.2",
     "uuid": "^9.0.0"
